# Loom_Core

./: .gitignore  COMPLETED.md  CURRENT_FOCUS.md  DECISIONS.md  PROGRESS.md  README.md  SESSION_LOG.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LOOM_CORE_MASTER_SPEC.md
scripts/: install.ps1  install.sh
src/loom_core/: __init__.py  browser.py  cli.py  context.py  continuity.py  locking.py  metrics.py  models.py  models_config.py  orchestrator.py  ownership.py  paths.py  plugins.py  projects.py  registry.py  store.py  tooling.py
src/loom_core/loops/: __init__.py  base.py  coding_support.py  distillation.py  meta.py
src/loom_core/mcp/: __init__.py  client.py  installer.py  server_registry.py
src/loom_core/mcp/catalog/: __init__.py  filesystem.yaml  github.yaml  memory.yaml  puppeteer.yaml  sqlite.yaml
src/loom_core/plugins/: __init__.py  loader.py
src/loom_core/tui/: __init__.py  app.py
tests/: __init__.py  test_cli.py  test_coding_support.py  test_context.py  test_continuity.py  test_dispatch_log.py  test_distillation.py  test_locking.py  test_meta.py  test_metrics.py  test_models.py  test_orchestrator.py  test_ownership.py  test_smoke.py  test_store.py  test_tooling.py
