[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-core"
version = "0.0.1"
description = "Loom Core - a local-first, memory-centric runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Loom Core" }]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

tui = [
    "textual>=0.80",
]

[project.scripts]
loom = "loom_core.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/loom_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
